Use recursion-schemes.

--- a/binary/cardano-sl-binary.cabal
+++ b/binary/cardano-sl-binary.cabal
@@ -37,6 +37,7 @@ library
                      , half
                      , hashable
                      , lens
+                     , micro-recursion-schemes
                      , mtl
                      , safecopy
                      , safe-exceptions
