[CDEC-404] Add golden `JSON` tests for `GenesisConfiguration`

--- a/core/test/cardano-sl-core-test.cabal
+++ b/core/test/cardano-sl-core-test.cabal
@@ -21,6 +21,7 @@ library
                        Test.Pos.Core.Arbitrary.Unsafe
 
   build-depends:       QuickCheck
+                     , aeson
                      , base
                      , base16-bytestring
                      , bytestring
