--- a/util/test/cardano-sl-util-test.cabal
+++ b/util/test/cardano-sl-util-test.cabal
@@ -14,6 +14,7 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:
+                       Test.Pos.Util.AesonTripping
                        Test.Pos.Util.Base16
                        Test.Pos.Util.Gen
                        Test.Pos.Util.Modifier
@@ -21,22 +22,31 @@ library
                        Test.Pos.Util.QuickCheck
                        Test.Pos.Util.QuickCheck.Property
                        Test.Pos.Util.QuickCheck.Arbitrary
+                       Test.Pos.Util.TempTH
 
   build-depends:       QuickCheck
+                     , aeson
                      , attoparsec
                      , base
                      , base16-bytestring
                      , bytestring
+                     , cardano-sl-binary
+                     , cardano-sl-core
+                     , cardano-sl-crypto
+                     , cardano-crypto
                      , cardano-sl-util
                      , cryptonite
+                     , ed25519
                      , formatting
                      , hedgehog
                      , hspec
                      , mtl
                      , quickcheck-instances
+                     , serokell-util
                      , tagged
                      , time-units
                      , universum
+                     , unordered-containers
 
   default-language:    Haskell2010
 
