Adds aeson-options

--- a/delegation/cardano-sl-delegation.cabal
+++ b/delegation/cardano-sl-delegation.cabal
@@ -38,6 +38,7 @@ library
 
   build-depends:       QuickCheck
                      , aeson
+                     , aeson-options
                      , base
                      , cardano-sl-binary
                      , cardano-sl-core
