--- a/ssc/cardano-sl-ssc.cabal
+++ b/ssc/cardano-sl-ssc.cabal
@@ -62,6 +62,7 @@ library
 
   build-depends:       QuickCheck
                      , aeson
+                     , aeson-options
                      , array
                      , base
                      , bytestring
