--- a/txp/cardano-sl-txp.cabal
+++ b/txp/cardano-sl-txp.cabal
@@ -61,6 +61,7 @@ library
     Pos.Aeson.Txp
 
   build-depends:       aeson
+                     , aeson-options
                      , base
                      , bytestring
                      , cardano-sl-binary
