--- a/block/cardano-sl-block.cabal
+++ b/block/cardano-sl-block.cabal
@@ -52,6 +52,7 @@ library
                         Pos.Block.Slog.Types
 
   build-depends:        aeson
+                      , aeson-options
                       , base
                       , bytestring
                       , cardano-sl-binary
