--- a/infra/cardano-sl-infra.cabal
+++ b/infra/cardano-sl-infra.cabal
@@ -118,6 +118,7 @@ library
   other-modules:        Paths_cardano_sl_infra
 
   build-depends:        aeson
+                      , aeson-options
                       , async
                       , base
                       , parsec
