--- a/lib/cardano-sl.cabal
+++ b/lib/cardano-sl.cabal
@@ -128,6 +128,7 @@ library
                       , acid-state-exts
                       , async
                       , aeson >= 0.11.2.1
+                      , aeson-options
                       , async
                       , ansi-terminal
                       , ansi-wl-pprint
