--- a/update/cardano-sl-update.cabal
+++ b/update/cardano-sl-update.cabal
@@ -72,6 +72,7 @@ library
 
   build-depends:       Cabal
                      , aeson
+                     , aeson-options
                      , base
                      , bytestring
                      , cardano-sl-binary
