Add more aeson-options

--- a/tools/cardano-sl-tools.cabal
+++ b/tools/cardano-sl-tools.cabal
@@ -218,6 +218,7 @@ executable cardano-launcher
   main-is:             Main.hs
 
   build-depends:       aeson
+                     , aeson-options
                      , ansi-wl-pprint
                      , async
                      , base
