More aeson-options

--- a/wallet-new/cardano-sl-wallet-new.cabal
+++ b/wallet-new/cardano-sl-wallet-new.cabal
@@ -124,6 +124,7 @@ library
                      , QuickCheck
                      , acid-state
                      , aeson
+                     , aeson-options
                      , aeson-pretty
                      , async
                      , beam-core
